--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,5 @@
+@import "./settings/settings.css";
 @import "./generic/reset.css";
-@import "./base/a.css";
+@import "./base/base.css";
+@import "./objects/objects.css";
+@import "./components/components.css";
