Estilizada a seção de promoções e os cards de promoção. Alterei o esquema de cores para ficar mais parecido com o wirefame do teste.

--- a/css/components/components.css
+++ b/css/components/components.css
@@ -1,2 +1,4 @@
 @import "./filters-navigation.css";
 @import "./filters-container.css";
+@import "./promotions-section.css";
+@import "./promotion-card.css";
