--- a/css/settings/colors.css
+++ b/css/settings/colors.css
@@ -1,7 +1,6 @@
 :root {
   --color-light: #ffffff;
-  --color-primary: #7e0cf5;
-  --color-secondary: #400082;
-  --color-third: #f7beff;
-  --color-dark: #000000;
+  --color-primary: #393e46;
+  --color-secondary: #222831;
+  --color-third: #f3f3f3;
 }
