--- a/css/components/filters-navigation.css
+++ b/css/components/filters-navigation.css
@@ -6,3 +6,24 @@
 .filters-navigation > .filters-container {
   display: flex;
 }
+
+.filters-navigation > .filters-container > .filter-promo {
+  flex-grow: 1;
+  text-align: center;
+  padding: 5px;
+}
+
+.filters-navigation > .filters-container > .filter-promo:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+.filters-navigation > .filters-container > .filter-promo:last-child {
+  border-radius: 0 5px 5px 0;
+}
+
+@media (min-width: 900px) {
+  .filters-navigation > .filters-container {
+    width: 550px;
+    margin: 0 auto;
+  }
+}
